# learning_gravity

./: .gitignore  pyproject.toml
learning_gravity/: __main__.py  dataset.py  generate.py  main.py  model.py  transforms.py  visualize_mass_dist.py
learning_gravity/datasets/example_0/: forces.txt  masses.txt  positions.txt
learning_gravity/datasets/example_1/: forces.txt  masses.txt  positions.txt
learning_gravity/datasets/example_2/: forces.txt  masses.txt  positions.txt
learning_gravity/example_runs/single_body_mass_dist/: definition.json  history.txt
learning_gravity/run_definitions/: single_body_linear_force.yml  single_body_mass_dist.yml  single_body_nn_force.yml  three_body_linear_force.yml  three_body_mass_dist.yml  three_body_nn_force.yml  two_body_linear_force.yml  two_body_mass_dist.yml
learning_gravity/util/: data_generator.py  evaluation_metrics.py  history_loader.py  plotting.py  selectors.py
tests/: dataset_test.py  transforms_test.py
