[tool.poetry]
name = "learning-gravity"
version = "0.1.0"
description = ""
authors = ["KarimAED <karim.alaael-din@gmx.de>"]
readme = "README.md"
packages = [{include = "learning_gravity"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
ipython = "^8.5.0"
PyYAML = "^6.0"
ffmpeg = "^1.4"
jupyter = "^1.0.0"
torchviz = "^0.0.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.4"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = "E1101"